[package]
name = "fxkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
gstuff = "0.7.15"
arrayvec = "0.7.2"
thiserror = "1.0.31"
spin = "0.9.3"
serde = "1.0.137"
serde_json = "1.0.81"
tempfile = "3.3.0"